<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RootVPN</string>
    <string name="widget_name">RootVPN</string>
    <string name="pref_cat_vpnsettings">VPN Settings</string>
    <string name="pref_vpnserver">VPN Server</string>
    <string name="pref_vpnserver_default">myvpnserver.com</string>
    <string name="pref_vpnport">VPN Port</string>
    <string name="pref_vpnport_default">1723</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_default">vpnuserid</string>
    <string name="pref_password">Password</string>
    <string name="pref_timeout_default">60</string>
    <string name="pref_timeout">Connection Timeout</string>
    <string name="pref_retries_default">3</string>
    <string name="pref_retries">Number Of Connection Retries</string>
</resources>
